force-app/main/default/objects/ProductFixForTelecare__c/ProductFixForTelecare__c.object-meta.xml
<CustomObject>
    <label>ProductFixForTelecare</label>
    <nameField>
        <label>ProductFixForTelecare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductFixForTelecare</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>