force-app/main/default/objects/ProductFixForTelecare__c/fields/LineDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>LineDiscountAmount__c</fullName>
    <label>LineDiscountAmount</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>