force-app/main/default/objects/ProductFixForTelecare__c/fields/LineGSTAmount__c.field-meta.xml
<CustomField>
    <fullName>LineGSTAmount__c</fullName>
    <label>LineGSTAmount</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>