force-app/main/default/objects/ProductFixForTelecare__c/fields/LineTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>LineTotalAmount__c</fullName>
    <label>LineTotalAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>