force-app/main/default/objects/ProductFixForTelecare__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <label>ListPrice</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>