force-app/main/default/objects/ProductFixForTelecare__c/fields/New_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Name__c</fullName>
    <label>New Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>