force-app/main/default/objects/ProductFixForTelecare__c/fields/ToProduct__c.field-meta.xml
<CustomField>
    <fullName>ToProduct__c</fullName>
    <label>ToProduct</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>