force-app/main/default/objects/ProductFixForTelecare__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <label>TotalPrice</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>