force-app/main/default/objects/ProductFixForTelecare__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>