force-app/main/default/objects/ProductFixForTelecare__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Frequency__c</columns>
    <columns>Completed__c</columns>
    <columns>New_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>